<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white" >
    
    <com.maomao.app.citybuy.view.MyHorizontalScrollView
        android:id="@+id/hsv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:focusable="false"
        android:clickable="true">
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            
            <LinearLayout 
                android:id="@+id/ll_home_content_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
    
			    <include layout="@layout/title_layout" />
			    
			    <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="0dp"
			        android:layout_weight="1"
			        android:orientation="vertical">
			        
			        <FrameLayout 
			            android:layout_width="match_parent"
			            android:layout_height="0dp"
			            android:layout_weight="2">
			        
				        <android.support.v4.view.ViewPager 
				            android:id="@+id/vp_home_slide"
				            android:layout_width="match_parent"
				            android:layout_height="match_parent"
				            android:focusable="true"
				            android:clickable="true" />
				        
				        <LinearLayout 
				            android:id="@+id/ll_home_slide_index"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:orientation="horizontal"
				            android:layout_marginBottom="15dp"
				            android:layout_marginRight="25dp"
				            android:layout_gravity="right|bottom"></LinearLayout>
			        
			        </FrameLayout>
			        
			        <LinearLayout 
			            android:layout_width="match_parent"
			            android:layout_height="0dp"
			            android:layout_weight="3"
			            android:orientation="vertical">
			            
			            <LinearLayout 
			                android:layout_width="match_parent"
			                android:layout_height="0dp"
			                android:layout_weight="1"
			                android:orientation="horizontal">
			                
			                <LinearLayout 
			                    android:id="@+id/ll_home_pictures"
			                    android:layout_width="0dp"
			                    android:layout_height="match_parent"
			                    android:layout_weight="1"
			                    android:orientation="vertical"
			                    android:gravity="center"
			                    android:background="@drawable/home_nav_item_selector">
			                    
			                    <ImageView 
			                        android:layout_width="wrap_content"
			                        android:layout_height="wrap_content"
			                        android:src="@drawable/home_icon_pictures" />
			                    
			                    <TextView 
			                        android:layout_width="wrap_content"
			                        android:layout_height="wrap_content"
			                        android:layout_marginTop="8dp"
			                        android:textColor="@color/text_color"
			                        android:textSize="14sp"
			                        android:text="@string/home_pictures" />
			                    
			                </LinearLayout>
			                
			                <View 
			                    android:layout_width="1px"
			                    android:layout_height="match_parent"
			                    android:background="@color/title_layout_bg" />
			                
			                <LinearLayout 
			                    android:id="@+id/ll_home_experience"
			                    android:layout_width="0dp"
			                    android:layout_height="match_parent"
			                    android:layout_weight="1"
			                    android:orientation="vertical"
			                    android:gravity="center"
			                    android:background="@drawable/home_nav_item_selector">
			                    
			                    <ImageView 
			                        android:layout_width="wrap_content"
			                        android:layout_height="wrap_content"
			                        android:src="@drawable/home_icon_experience" />
			                    
			                    <TextView 
			                        android:layout_width="wrap_content"
			                        android:layout_height="wrap_content"
			                        android:layout_marginTop="8dp"
			                        android:textColor="@color/text_color"
			                        android:textSize="14sp"
			                        android:text="@string/home_experience" />
			                    
			                </LinearLayout>
			                
			                <View 
			                    android:layout_width="1px"
			                    android:layout_height="match_parent"
			                    android:background="@color/title_layout_bg" />
			                
			                <LinearLayout 
			                    android:id="@+id/ll_home_company"
			                    android:layout_width="0dp"
			                    android:layout_height="match_parent"
			                    android:layout_weight="1"
			                    android:orientation="vertical"
			                    android:gravity="center"
			                    android:background="@drawable/home_nav_item_selector">
			                    
			                    <ImageView 
			                        android:layout_width="wrap_content"
			                        android:layout_height="wrap_content"
			                        android:src="@drawable/home_icon_company" />
			                    
			                    <TextView 
			                        android:layout_width="wrap_content"
			                        android:layout_height="wrap_content"
			                        android:layout_marginTop="8dp"
			                        android:textColor="@color/text_color"
			                        android:textSize="14sp"
			                        android:text="@string/home_company" />
			                    
			                </LinearLayout>
			                
			            </LinearLayout>
			            
			            <View 
			                android:layout_width="match_parent"
			                android:layout_height="1px"
			                android:background="@color/title_layout_bg" />
			            
			            <LinearLayout 
			                android:layout_width="match_parent"
			                android:layout_height="0dp"
			                android:layout_weight="1"
			                android:orientation="horizontal">
			                
			                <LinearLayout 
			                    android:id="@+id/ll_home_building_materiials"
			                    android:layout_width="0dp"
			                    android:layout_height="match_parent"
			                    android:layout_weight="1"
			                    android:orientation="vertical"
			                    android:gravity="center"
			                    android:background="@drawable/home_nav_item_selector">
			                    
			                    <ImageView 
			                        android:layout_width="wrap_content"
			                        android:layout_height="wrap_content"
			                        android:src="@drawable/home_icon_building_materials" />
			                    
			                    <TextView 
			                        android:layout_width="wrap_content"
			                        android:layout_height="wrap_content"
			                        android:layout_marginTop="8dp"
			                        android:textColor="@color/text_color"
			                        android:textSize="14sp"
			                        android:text="@string/home_building_materiials" />
			                    
			                </LinearLayout>
			                
			                <View 
			                    android:layout_width="1px"
			                    android:layout_height="match_parent"
			                    android:background="@color/title_layout_bg" />
			                
			                <LinearLayout 
			                    android:id="@+id/ll_home_accounts"
			                    android:layout_width="0dp"
			                    android:layout_height="match_parent"
			                    android:layout_weight="1"
			                    android:orientation="vertical"
			                    android:gravity="center"
			                    android:background="@drawable/home_nav_item_selector">
			                    
			                    <ImageView 
			                        android:layout_width="wrap_content"
			                        android:layout_height="wrap_content"
			                        android:src="@drawable/home_icon_accounts" />
			                    
			                    <TextView 
			                        android:layout_width="wrap_content"
			                        android:layout_height="wrap_content"
			                        android:layout_marginTop="8dp"
			                        android:textColor="@color/text_color"
			                        android:textSize="14sp"
			                        android:text="@string/home_accounts" />
			                    
			                </LinearLayout>
			                
			                <View 
			                    android:layout_width="1px"
			                    android:layout_height="match_parent"
			                    android:background="@color/title_layout_bg" />
			                
			                <LinearLayout 
			                    android:id="@+id/ll_home_consult"
			                    android:layout_width="0dp"
			                    android:layout_height="match_parent"
			                    android:layout_weight="1"
			                    android:orientation="vertical"
			                    android:gravity="center"
			                    android:background="@drawable/home_nav_item_selector">
			                    
			                    <ImageView 
			                        android:layout_width="wrap_content"
			                        android:layout_height="wrap_content"
			                        android:src="@drawable/home_icon_consult" />
			                    
			                    <TextView 
			                        android:layout_width="wrap_content"
			                        android:layout_height="wrap_content"
			                        android:layout_marginTop="8dp"
			                        android:textColor="@color/text_color"
			                        android:textSize="14sp"
			                        android:text="@string/home_consult" />
			                    
			                </LinearLayout>
			                
			            </LinearLayout>
			            
			        </LinearLayout>
			        
			    </LinearLayout>
			    
			</LinearLayout>	    
			
            <include layout="@layout/setting" />
	    
	    </LinearLayout>
    
    </com.maomao.app.citybuy.view.MyHorizontalScrollView>

</LinearLayout>
